Bug 296707 - Cannot add a search engine from the URL bar
Summary: Cannot add a search engine from the URL bar
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9.0
Platform: Chakra Linux
: NOR minor
Target Milestone: 0.10
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-24 20:13 UTC by Adrián Chaves (Gallaecio)
Modified: 2012-07-11 18:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrián Chaves (Gallaecio) 2012-03-24 20:13:16 UTC
On certain websites, Rekonq shows the web shortcut icon at the right side on the URL bar, and if you click, a dialog pops up asking you for a name and a shortcut for the new search engine you are adding to Rekong based on the current page you are visiting.

But it has no effects. The search engine is not listed then among the search engines, neither is it possible to use it by writting on the URL bar (shortcut:<terms>).

I am guessing it is an unfinished feature. While I would love for it to work, I would prefer, from an user’s point of view, for you to remove the icon from the URL bar completely, until someone implements the feature for real.

Steps to reproduce:
1. Go to https://thepiratebay.se/search/kde/0/7/0
2. Once the page is completely loaded, web shortcuts icons (as seen on the settings, only smaller) will be displayed on the right side of the field where you entered the URL. If you cover the icon, tooltip says “Add Web Shortcut” (or similar text).
3. Click there, and fill the fields on the popup dialog. For example: “The Pirate Bay” as name, and “tpb” as shortcut.
4. Click “OK”.
5. Go to Configure rekonq… → Search Engines and look for your newly added engine. It won’t be there.
6. Back to the URL bar, write “tbp:kde”. It won’t work.
Comment 1 Andrea Diamantini 2012-04-22 22:30:19 UTC
Git commit d09b430f9835fd19f9a0088a5620af20bdf36b0e by Andrea Diamantini.
Committed on 23/04/2012 at 00:34.
Pushed by adjam into branch 'Branches.0.9'.

Fix opensearch add shortcut handling

(at least on every site tested, but opensearch.org itself. Broken?)

Backported from master branch

M  +51   -49   src/opensearch/opensearchmanager.cpp
M  +3    -1    src/opensearch/opensearchmanager.h
M  +1    -0    src/opensearch/opensearchreader.cpp
M  +1    -2    src/urlbar/urlbar.cpp
M  +4    -5    src/urlbar/webshortcutwidget.cpp
M  +12   -2    src/urlbar/webshortcutwidget.h
M  +1    -1    src/webtab.cpp
M  +6    -6    src/webtab.h

http://commits.kde.org/rekonq/d09b430f9835fd19f9a0088a5620af20bdf36b0e
Comment 2 Andrea Diamantini 2012-04-22 22:30:33 UTC
Git commit ae1c295495659fb01874ae6af4d0b89a0a2424dc by Andrea Diamantini.
Committed on 23/04/2012 at 00:34.
Pushed by adjam into branch 'master'.

Fix opensearch add shortcut handling

(at least on every site tested, but opensearch.org itself. Broken?)

M  +51   -49   src/opensearch/opensearchmanager.cpp
M  +3    -1    src/opensearch/opensearchmanager.h
M  +1    -0    src/opensearch/opensearchreader.cpp
M  +1    -2    src/urlbar/urlbar.cpp
M  +4    -5    src/urlbar/webshortcutwidget.cpp
M  +12   -2    src/urlbar/webshortcutwidget.h
M  +1    -1    src/webtab.cpp
M  +6    -6    src/webtab.h

http://commits.kde.org/rekonq/ae1c295495659fb01874ae6af4d0b89a0a2424dc
Comment 3 Andrea Diamantini 2012-04-26 23:37:33 UTC
Git commit bbf33903b15e003c249d578fe2aa4e6e0050b0fd by Andrea Diamantini.
Committed on 23/04/2012 at 00:34.
Pushed by adjam into branch 'Branches.0.9'.

Fix opensearch add shortcut handling

(at least on every site tested, but opensearch.org itself. Broken?)

Backported from master with the needed compile fixes

M  +51   -49   src/opensearch/opensearchmanager.cpp
M  +3    -1    src/opensearch/opensearchmanager.h
M  +1    -0    src/opensearch/opensearchreader.cpp
M  +1    -0    src/tabpreviewpopup.cpp
M  +1    -2    src/urlbar/urlbar.cpp
M  +4    -5    src/urlbar/webshortcutwidget.cpp
M  +12   -2    src/urlbar/webshortcutwidget.h
M  +1    -1    src/webtab.cpp
M  +6    -6    src/webtab.h

http://commits.kde.org/rekonq/bbf33903b15e003c249d578fe2aa4e6e0050b0fd
Comment 4 Antonis G. 2012-07-08 16:05:03 UTC
Add  search engine from url bar doesn't work for me either. I'm using rekonq compiled from trunk (git:0.9.82) in Chakra Linux
Comment 5 Andrea Diamantini 2012-07-09 14:48:19 UTC
Antonis, can you try rekonq master or rekonq 0.9.82 to see if it is working now? Can you suggest me a link where you see it NOT working?
Comment 6 Antonis G. 2012-07-11 18:08:17 UTC
(In reply to comment #5)
> Antonis, can you try rekonq master or rekonq 0.9.82 to see if it is working
> now? Can you suggest me a link where you see it NOT working?

Hello I tried rekonq master but it still doesnt work, (https://thepiratebay.se/ http://open-tran.eu/) (but overall rekonq is very stable!!)
Thanks alot