Fix opensearch add shortcut handling

(at least on every site tested, but opensearch.org itself. Broken?)

BUG: 296707