src/opensearch/opensearchmanager.h
@@ -97,7 +97,7 @@ private Q_SLOTS:
 
 Q_SIGNALS:
     void suggestionsReceived(const QString &text, const ResponseList &suggestion);
-    void openSearchEngineAdded(const QString &name, const QString &searchUrl, const QString &fileName);
+    void openSearchEngineAdded(const QString &name);
 
 private:
     QString trimmedEngineName(const QString &engineName) const;
@@ -117,7 +117,9 @@ private:
     KUrl m_jobUrl;
 
     QString _typedText;
+
     QString m_shortcut;
+    QString m_title;
 };
 
 #endif // OPENSEARCHMANAGER_H
